--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-serve-static-core": "^4.17.41",
+    "@types/multer": "^1.4.11",
+    "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.3",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jimp": "^0.22.10",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1"
   }
 }
